# mi-dev-integral-rel4

./: .gitignore  404.html  Cargo.toml  _config.yml  build.py  index.html  mkdocs.yml  repo.sh  search.html  update.sh
.cargo/: config.toml
.github/workflows/: parse.py  push-to-discrete-repo.yaml  test.yaml
docs/: 使用Subrepo大小仓库同步开发reL4指南.md  组件化微内核文档.md
driver-collect/: .gitrepo  Cargo.toml
driver-collect/src/: lib.rs
kernel/: .gitrepo  Cargo.toml  README.md  makefile  rel4kernel.code-workspace  root-task-demo.code-workspace  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/.github/workflows/: push-to-discrete-repo.yaml  test.yaml
kernel/src/: compatibility.rs  config.rs  ffi.rs  lang_items.rs  lib.rs  structures.rs  utils.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.rs  c_traps.rs  consts.rs  exception.rs  ffi.rs  instruction.rs  mod.rs  pg.rs  platform.rs
kernel/src/arch/aarch64/arm_gic/: mod.rs
kernel/src/arch/aarch64/arm_gic/gic_v2/: consts.rs  gic_v2.rs  mod.rs
kernel/src/arch/aarch64/arm_gic/gic_v3/: mod.rs
kernel/src/arch/riscv/: boot.rs  c_traps.rs  exception.rs  mod.rs  platform.rs
kernel/src/boot/: interface.rs  mm.rs  mod.rs  root_server.rs  untyped.rs  utils.rs
kernel/src/interfaces_impl/: cspace.rs  mod.rs
kernel/src/interrupt/: handler.rs  mod.rs
kernel/src/kernel/: boot.rs  fastpath.rs  fastpath_restore.S  fault.rs  mod.rs
kernel/src/object/: mod.rs
kernel/src/syscall/: mod.rs  syscall_reply.rs  utils.rs
kernel/src/syscall/invocation/: invoke_cnode.rs  invoke_irq.rs  invoke_mmu_op.rs  invoke_tcb.rs  invoke_untyped.rs  mod.rs
kernel/src/syscall/invocation/arch/: aarch64.rs  mod.rs  riscv64.rs
kernel/src/syscall/invocation/decode/: decode_cnode_invocation.rs  decode_domain_invocation.rs  decode_irq_invocation.rs  decode_tcb_invocation.rs  decode_untyped_invocation.rs  mod.rs
kernel/src/syscall/invocation/decode/arch/: aarch64.rs  mod.rs  riscv64.rs
search/: search_index.json
sel4_common/: .gitrepo  Cargo.toml  Makefile  build.rs  test.dtb  test.dts
sel4_common/bitfield-types/src/: lib.rs
sel4_common/pbf/aarch64/: types.pbf
sel4_common/pbf/riscv64/: structures.bf.pbf  types.pbf
sel4_common/src/: .gitignore  cap_rights.rs  console.rs  fault.rs  ffi.rs  lib.rs  logging.rs  message_info.rs  object.rs  sel4_bitfield_types.rs  sel4_config.rs  smp.rs  structures.rs  utils.rs  vm_rights.rs
sel4_common/src/arch/: mod.rs
sel4_common/src/arch/aarch64/: arch_tcb.rs  config.rs  message_info.rs  mod.rs  object.rs  registers.rs  vm_rights.rs
sel4_common/src/arch/riscv64/: arch_tcb.rs  config.rs  message_info.rs  mod.rs  object.rs  registers.rs  vm_rights.rs
sel4_cspace/: .gitrepo
sel4_cspace/.cargo/: config.toml
sel4_cspace/.github/workflows/: ci.yaml
sel4_cspace/src/: compatibility.rs  cte.rs  deps.rs  interface.rs  lib.rs  structures.rs
sel4_cspace/src/arch/aarch64/: mod.rs
sel4_cspace/src/arch/riscv64/: mod.rs
sel4_cspace/src/cap/: mod.rs  zombie.rs
sel4_cspace/src/capability/: mod.rs  zombie.rs
sel4_ipc/: .gitrepo  Cargo.toml  doc.md
sel4_ipc/src/: endpoint.rs  lib.rs  notification.rs  transfer.rs
sel4_task/: .gitrepo  Cargo.toml  doc.md
sel4_task/src/: deps.rs  lib.rs  scheduler.rs  structures.rs  tcb.rs  tcb_queue.rs  thread_state.rs
sel4_vspace/: .gitrepo
sel4_vspace/src/: asid.rs  boot.rs  structures.rs
sel4_vspace/src/arch/aarch64/: asid.rs  boot.rs  device.rs  interface.rs  machine.rs  mod.rs  pagetable.rs  pte.rs  structures.rs  utils.rs
sel4_vspace/src/arch/riscv64/: asid.rs  boot.rs  device.rs  interface.rs  mod.rs  pagetable.rs  pte.rs  utils.rs
serial-frame/: .gitrepo  Cargo.toml
serial-frame/src/: lib.rs
serial-impl/pl011/: .gitrepo  Cargo.toml
serial-impl/pl011/.github/workflows/: push-to-discrete-repo.yaml
serial-impl/pl011/src/: lib.rs
serial-impl/sbi/: .gitrepo  Cargo.toml
serial-impl/sbi/src/: lib.rs
site/组件化微内核文档/: index.html
使用Subrepo大小仓库同步开发reL4指南/: index.html
组件化微内核文档/: index.html
