[package]
name = "driver-collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial-frame = { git = "https://github.com/rel4team/serial-frame.git", branch = "mi_dev" }
serial-impl-pl011 = { git = "https://github.com/rel4team/serial-impl-pl011.git", branch = "mi_dev" }
serial-impl-sbi = { git = "https://github.com/rel4team/serial-impl-sbi.git", branch = "mi_dev" }
cfg-if = "1.0.0"
