[package]
name = "serial-impl-pl011"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.9"
serial-frame = { git = "https://github.com/rel4team/serial-frame.git", branch = "mi_dev" }
